https://github.com/dronekit/dronekit-python/pull/1023
fixed last_heartbeat function #1023

https://github.com/dronekit/dronekit-python/pull/1002/files
Fixed gimbal target location#1002